# YData-MLOps-Automatic-Improvement

./: README.md  pyproject.toml  requirements.txt
Code/Experiment Notebooks/: README.md  log_loss_improve_using_uq360.ipynb  macest_on_bank_marketing.ipynb
Code/auto_improve_macest/: README.md
Code/auto_improve_pipeline/: README.md  __init__.py  auto_improve_step.py
Code/data_acquisition/: bank_marketing_constants.py  bank_marketing_loading.py  german_credit_loading.py
Code/modeling/: baseline_bank_marketing.json  readme.md  xgboost_bank_marketing_impl.py  xgboost_german_credit_impl.py
Code/notebooks/: auto_improve_example_usage.ipynb  baseline-impl-bank-marketing-dataset.ipynb  baseline-impl-german-credit-dataset.ipynb  xgboost-implementation-on-bank-marketing-dataset.ipynb
Docs/Data_Dictionaries/: ReadMe.md
Docs/Models/Baseline/: Bank Marketing Baseline Model.md  German Credit Risk Baseline Model.md
Docs/Project/: Charter.md
