[tool.poetry]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
ucimlrepo = "^0.0.7"
numpy = "^2.0.0"
statsmodels = "^0.14.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
xgboost = "^2.1.0"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
