[tool.poetry]
name="ydata-mlops-proj"
version="0.0.0"
description=""
authors=[]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
uq360 = "0.2"
jupyter = "1.0.0"
scikit-learn = "0.24.2"
pandas = "1.1.5"
ucimlrepo = "0.0.7"
numpy = "1.20.3"
seaborn = "0.12.2"
matplotlib = "3.5.3"
xgboost = "1.6.2"
graphviz = "0.20.1"
protobuf = "3.20.x"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
